--- a/ConvertZZ/Pages/Page_File.xaml
+++ b/ConvertZZ/Pages/Page_File.xaml
@@ -92,8 +92,8 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <StackPanel>
-                    <RadioButton GroupName="origin" Content="UTF-8" Click="Encoding_Selected"/>
-                    <RadioButton GroupName="origin" IsChecked="True" Content="BIG5" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" IsChecked="True" Content="UTF-8" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="origin" Content="BIG5" Click="Encoding_Selected"/>
                     <RadioButton GroupName="origin" Content="GBK" Click="Encoding_Selected"/>
                     <RadioButton GroupName="origin" Content="Shift-jis" Click="Encoding_Selected"/>
                     <RadioButton GroupName="origin" Content="Unicode" Click="Encoding_Selected"/>
@@ -103,9 +103,9 @@
                     <RadioButton GroupName="origin" Content="EUC-JP" Click="Encoding_Selected"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1">
-                    <RadioButton GroupName="target" Content="UTF-8" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" IsChecked="True" Content="UTF-8" Click="Encoding_Selected"/>
                     <RadioButton GroupName="target" Content="BIG5" Click="Encoding_Selected"/>
-                    <RadioButton GroupName="target" IsChecked="True" Content="GBK" Click="Encoding_Selected"/>
+                    <RadioButton GroupName="target" Content="GBK" Click="Encoding_Selected"/>
                     <RadioButton GroupName="target" Content="Shift-jis" Click="Encoding_Selected"/>
                     <RadioButton GroupName="target" Content="Unicode" Click="Encoding_Selected"/>
                     <RadioButton GroupName="target" Content="UnicodeFFFE" Click="Encoding_Selected"/>
