--- a/ConvertZZ/MainWindow.xaml
+++ b/ConvertZZ/MainWindow.xaml
@@ -49,9 +49,9 @@
                 <Separator/>
             </MenuItem>
             <MenuItem Uid="1" Header="隱藏/顯示懸浮球" Click="MenuItem_Click"/>
-            <MenuItem Header="Setting" Click="Setting_Click"/>
-            <MenuItem Header="About" Click="About_Click"/>
-            <MenuItem Header="Exit" Click="Exit_Click"/>
+            <MenuItem Header="設定" Click="Setting_Click"/>
+            <MenuItem Header="關於Convertzz" Click="About_Click"/>
+            <MenuItem Header="結束Convertzz" Click="Exit_Click"/>
         </ContextMenu>
     </Window.Resources>
     <Grid ContextMenu="{StaticResource NotifyIconMenu}">
